--- a/WolvenKit/Views/Wizards/ProjectWizardView.xaml
+++ b/WolvenKit/Views/Wizards/ProjectWizardView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl
+<catel:DataWindow
     x:Class="WolvenKit.Views.Wizards.ProjectWizardView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,11 +11,16 @@
     Tag="Project Wizard"
     mc:Ignorable="av"
 
-
-
+    AllowsTransparency="True"
+    BorderBrush="{x:Null}"
+    ShowInTaskbar="True"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    
+    
     >
 
-    <catel:UserControl.Resources>
+    <catel:DataWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <hc:ThemeResources />
@@ -23,26 +28,73 @@
                 <ResourceDictionary Source="pack://application:,,,/Themes/TextBoxExtendedCustom.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </catel:UserControl.Resources>
-    <Grid
+    </catel:DataWindow.Resources>
+
+    <Grid>
+        <Border
+            MinWidth="700"
+            MinHeight="300"
+            MaxWidth="1200"
+            hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"
+            BorderBrush="{DynamicResource MahApps.Brushes.Accent4}"
+            BorderThickness="1">
+
+            <Grid Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
+
+                <Grid
+                    x:Name="DraggableTitleBar"
+                    Grid.ColumnSpan="2"
+                    VerticalAlignment="Top"
+                    Background="{DynamicResource ContentBackground}"
+                    MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown">
+
+                    <!--  TitleBar  Please add onmousedown event to be able to drag the window  -->
+                    <Button
+                        Margin="3,3,5,3"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center"
+                        hc:IconElement.Geometry="{DynamicResource GlobalClose}"
+                        Background="Transparent"
+                        BorderBrush="{x:Null}"
+                        Click="ButtonClose"
+                        Style="{StaticResource ButtonIcon}" />
+
+                    <Button
+                        Width="40"
+                        Margin="3,3,45,3"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center"
+                        hc:IconElement.Geometry="{DynamicResource GlobalMinimize}"
+                        Background="Transparent"
+                        BorderBrush="{x:Null}"
+                        Click="ButtonMinimize"
+                        Style="{StaticResource ButtonIcon}" />
+
+                    <!--
+
+                    <TextBlock Margin="13,0,0,0" Height="23" Text="{Binding Content, ElementName=UserContentControl }"  HorizontalAlignment="Left" VerticalAlignment="Center" />
+                     No Title needed for Wizards imo-->
+                </Grid>
+
+                <Grid
         MinWidth="150"
         Margin="0"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Stretch"
         hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
 
-        <StackPanel
+                    <StackPanel
             Margin="0,0,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Orientation="Horizontal">
 
-            <iconPacks:PackIconCodicons
+                        <iconPacks:PackIconCodicons
                 Grid.Row="0"
                 Width="30"
                 Height="30"
@@ -54,7 +106,7 @@
                 Spin="False"
                 SpinAutoReverse="False" />
 
-            <TextBlock
+                        <TextBlock
                 Grid.Row="0"
                 Margin="10,-1,0,0"
                 HorizontalAlignment="Left"
@@ -62,62 +114,62 @@
                 FontSize="17"
                 Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
                 Text="Let's create a project!" />
-        </StackPanel>
+                    </StackPanel>
 
-        <syncfusion:WizardControl Grid.Row="1"
+                    <syncfusion:WizardControl Grid.Row="1"
             Name="wizardControl"
             Grid.RowSpan="3"
             Margin="0,0,0,0"
             FinishEnabled="{Binding AllFieldsValid, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
 
-            <hc:Interaction.Triggers>
-                <hc:EventTrigger EventName="Finish">
-                    <hc:EventToCommand Command="{Binding FinishCommand}" PassEventArgsToCommand="True" />
-                </hc:EventTrigger>
-                <hc:EventTrigger EventName="Cancel">
-                    <hc:EventToCommand Command="{Binding CancelCommand}" PassEventArgsToCommand="True" />
-                </hc:EventTrigger>
-            </hc:Interaction.Triggers>
+                        <hc:Interaction.Triggers>
+                            <hc:EventTrigger EventName="Finish">
+                                <hc:EventToCommand Command="{Binding FinishCommand}" PassEventArgsToCommand="True" />
+                            </hc:EventTrigger>
+                            <hc:EventTrigger EventName="Cancel">
+                                <hc:EventToCommand Command="{Binding CancelCommand}" PassEventArgsToCommand="True" />
+                            </hc:EventTrigger>
+                        </hc:Interaction.Triggers>
 
 
-            <syncfusion:WizardPage
+                        <syncfusion:WizardPage
                 Name="wizardPage1"
                 BackVisibility="Collapsed"
                 HelpVisibility="Collapsed"
                 NextVisibility="Collapsed">
 
-                <Grid Grid.Row="1" HorizontalAlignment="Stretch">
+                            <Grid Grid.Row="1" HorizontalAlignment="Stretch">
 
-                    <StackPanel
+                                <StackPanel
                         Margin="0,-20,0,0"
                         VerticalAlignment="Center"
                         Orientation="Vertical">
 
-                        <Grid Margin="0,-40,0,0">
+                                    <Grid Margin="0,-40,0,0">
 
-                            <StackPanel>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="1.2*" />
-                                        <ColumnDefinition Width="4*" />
-                                    </Grid.ColumnDefinitions>
-                                    <StackPanel Orientation="Vertical">
-                                        <hc:ImageSelector
+                                        <StackPanel>
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="1.2*" />
+                                                    <ColumnDefinition Width="4*" />
+                                                </Grid.ColumnDefinitions>
+                                                <StackPanel Orientation="Vertical">
+                                                    <hc:ImageSelector
                                             x:Name="imgSelector"
                                             Width="125"
                                             Height="125"
                                             Margin="0,10,0,0"
                                             HorizontalAlignment="Left"
                                             VerticalAlignment="Center" />
-                                        <TextBlock
+                                                    <TextBlock
                                             HorizontalAlignment="Center"
                                             VerticalAlignment="Center"
                                             Foreground="Gray"
                                             Text="Project icon (Optional)"
                                             TextAlignment="Left" />
-                                    </StackPanel>
-                                    <StackPanel Grid.Column="1" Margin="0,5,0,0">
-                                        <hc:TextBox
+                                                </StackPanel>
+                                                <StackPanel Grid.Column="1" Margin="0,5,0,0">
+                                                    <hc:TextBox
                                             x:Name="xprojectNameTxtbx"
                                             Margin="0,-10,0,0"
                                             HorizontalAlignment="Stretch"
@@ -129,12 +181,12 @@
                                             Text="{Binding ProjectName}"
                                             VerifyFunc="VerifyIfProjectExists"/>
 
-                                        <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="3*" />
-                                                <ColumnDefinition Width="60" />
-                                            </Grid.ColumnDefinitions>
-                                            <hc:TextBox
+                                                    <Grid>
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="3*" />
+                                                            <ColumnDefinition Width="60" />
+                                                        </Grid.ColumnDefinitions>
+                                                        <hc:TextBox
                                                 x:Name="projectPathTxtbx"
                                                 Margin="0,10,0,0"
                                                 HorizontalAlignment="Stretch"
@@ -149,7 +201,7 @@
                                                 VerifyFunc="VerifyFolder"
                                                 />
 
-                                            <Button
+                                                        <Button
                                                 Grid.Column="1"
                                                 Width="50"
                                                 Height="34"
@@ -158,7 +210,7 @@
                                                 VerticalAlignment="Bottom"
                                                 Command="{Binding OpenProjectPathCommand}">
 
-                                                <iconPacks:PackIconCodicons
+                                                            <iconPacks:PackIconCodicons
                                                     Grid.Row="0"
                                                     Width="15"
                                                     Height="15"
@@ -169,24 +221,29 @@
                                                     Kind="FolderOpened"
                                                     Spin="False"
                                                     SpinAutoReverse="False" />
-                                            </Button>
-                                        </Grid>
-                                        <hc:ComboBox
+                                                        </Button>
+                                                    </Grid>
+                                                    <hc:ComboBox
                                             Margin="0,20,8,0"
                                             hc:InfoElement.Necessary="False"
                                             hc:InfoElement.Title="Project Type"
                                             hc:InfoElement.TitlePlacement="Left"
                                             hc:InfoElement.TitleWidth="90"
-                                            SelectedIndex="0">
-                                            <ComboBoxItem Content="Cyberpunk 2077" />
-                                        </hc:ComboBox>
-                                    </StackPanel>
-                                </Grid>
-                            </StackPanel>
-                        </Grid>
-                    </StackPanel>
+                                            SelectedIndex="0"
+                                            ItemsSource="{Binding ProjectType}">
+                                                    </hc:ComboBox>
+                                                </StackPanel>
+                                            </Grid>
+                                        </StackPanel>
+                                    </Grid>
+                                </StackPanel>
+                            </Grid>
+                        </syncfusion:WizardPage>
+                    </syncfusion:WizardControl>
                 </Grid>
-            </syncfusion:WizardPage>
-        </syncfusion:WizardControl>
+            </Grid>
+        </Border>
     </Grid>
-</catel:UserControl>
+
+    
+</catel:DataWindow>
