--- a/WolvenKit/Views/Wizards/FirstSetupWizardView.xaml
+++ b/WolvenKit/Views/Wizards/FirstSetupWizardView.xaml
@@ -3,14 +3,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:catel="http://schemas.catelproject.com"
-    Initialized="UserControl_Initialized_1"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     xmlns:wizards="clr-namespace:WolvenKit.ViewModels.Wizards;assembly=WolvenKit.App"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    Height="500" MinHeight="500" MinWidth="700" Width="auto"
-    >
+    Width="auto"
+    Height="500"
+    MinWidth="700"
+    MinHeight="500"
+    Initialized="UserControl_Initialized_1">
 
     <catel:UserControl.Resources>
         <ResourceDictionary>
@@ -65,8 +67,7 @@
             Grid.RowSpan="3"
             Margin="0,33,0,0"
             FinishButtonClosesWindow="True"
-            FinishEnabled="{Binding AllFieldsValid, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-            >
+            FinishEnabled="{Binding AllFieldsValid, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
             <hc:Interaction.Triggers>
                 <hc:EventTrigger EventName="Finish">
                     <hc:EventToCommand Command="{Binding FinishCommand}" PassEventArgsToCommand="True" />
@@ -94,19 +95,16 @@
                                     <iconPacks:PackIconRPGAwesome
 
                 Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                Kind="WolfHowl"
-                 />
-                                    <TextBlock Margin="5,0,0,0"  VerticalAlignment="Center" Text="Setup a profile (optional)"/>
-
+                Kind="WolfHowl" />
+                                    <TextBlock Margin="5,0,0,0"  VerticalAlignment="Center" Text="Setup a profile (optional)" />
                                 </StackPanel>
-                                <hc:Divider Margin="0,5,0,15"/>
+                                <hc:Divider Margin="0,5,0,15" />
                                 <Grid Margin="0,0,0,0">
                                     <StackPanel>
                                         <Grid>
                                             <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="1*"/>
-                                                <ColumnDefinition Width="3*"/>
-
+                                                <ColumnDefinition Width="1*" />
+                                                <ColumnDefinition Width="3*" />
                                             </Grid.ColumnDefinitions>
                                             <hc:ImageSelector
                                              x:Name="imgSelector"
@@ -122,10 +120,7 @@
                                                     <syncfusion:SfTextBoxExt Text="{Binding Email}" />
                                                 </syncfusion:SfTextInputLayout>
                                             </StackPanel>
-
                                         </Grid>
-
-
 
                                         <syncfusion:SfTextInputLayout  Hint="Donate Link">
                                             <syncfusion:SfTextBoxExt Text="{Binding DonateLink}" />
@@ -133,9 +128,8 @@
                                         <syncfusion:SfTextInputLayout  Hint="Description">
                                             <syncfusion:SfTextBoxExt Text="{Binding Description}" />
                                         </syncfusion:SfTextInputLayout>
-                                        <TextBlock  Text="Theme (applies after restart.)"/>
+                                        <TextBlock  Text="Theme (applies after restart.)" />
                                         <Border BorderThickness="1" BorderBrush="Gray" CornerRadius="4">
-
 
                                         <WrapPanel
                          x:Name="CircleTest"
@@ -144,8 +138,6 @@
                          VerticalAlignment="Center"
                          FlowDirection="LeftToRight" />
                                         </Border>
-
-                                       
                                     </StackPanel>
                                 </Grid>
                             </StackPanel>
@@ -157,119 +149,119 @@
             <syncfusion:WizardPage
                 Name="wizardPage2"
                 BackVisibility="Collapsed"
-                HelpVisibility="Collapsed"
-                NextVisibility="Collapsed"
+                CancelVisibility="Collapsed"
                 FinishVisibility="Visible"
-                CancelVisibility="Collapsed">
+                HelpVisibility="Collapsed"
+                NextVisibility="Collapsed">
                 <Grid Grid.Row="3" VerticalAlignment="Center">
                     <Grid
-         Margin="5,-90,5,100"
-         HorizontalAlignment="Stretch"
-         Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
+                        Margin="5,-90,5,100"
+                        HorizontalAlignment="Stretch"
+                        Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
                         <Grid Grid.Row="1" HorizontalAlignment="Stretch">
                             <StackPanel
-                 Margin="0,0,0,0"
-                 VerticalAlignment="Top"
-                 Orientation="Vertical">
+                                Margin="0,0,0,0"
+                                VerticalAlignment="Top"
+                                Orientation="Vertical">
                                 <StackPanel Orientation="Horizontal">
-                                    <iconPacks:PackIconRPGAwesome
-
-                Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                Kind="WolfHowl"
-                 />
-                                    <TextBlock Margin="5,0,0,0"  VerticalAlignment="Center" Text="Locate Game Data"/>
-
+                                    <iconPacks:PackIconRPGAwesome Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Kind="WolfHowl" />
+                                    <TextBlock
+                                        Margin="5,0,0,0"
+                                        VerticalAlignment="Center"
+                                        Text="Locate Game Data" />
                                 </StackPanel>
-                                <hc:Divider Margin="0,5,0,15"/>
+                                <hc:Divider Margin="0,5,0,15" />
                                 <Grid Margin="0,0,0,0">
                                     <StackPanel>
-
-
                                         <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="1*"/>
-                                                <ColumnDefinition Width="1*"/>
-
-                                            </Grid.ColumnDefinitions>
-                                        </Grid>
-
-                                        <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="3*" />
-                                                <ColumnDefinition Width="60" />
-                                            </Grid.ColumnDefinitions>
-
                                             <StackPanel>
-                                                <syncfusion:SfTextInputLayout  Hint="Enter full path : Cyberpunk 2077\bin\x64\Cyberpunk2077.exe">
+                                                <StackPanel Orientation="Horizontal">
                                                     <hc:TextBox
-                                                         x:Name="cp77ExeTxtb"
-                                                         Margin="0,-15,0,-15"
-                                                         hc:InfoElement.Necessary="True"
-                                                         hc:InfoElement.Title="Executable Path"
-                                                         hc:InfoElement.TitlePlacement="Left"
-                                                         hc:InfoElement.TitleWidth="0"
-                                                         Style="{StaticResource TextBoxExtendCustom}"
-                                                         Text="{Binding CP77ExePath}"
-                                                         TextChanged="Field_TextChanged"
-                                                         VerifyFunc="VerifyFile"
-                                                         />
-                                                </syncfusion:SfTextInputLayout>
-                                                
-                                                <TextBlock Visibility="Collapsed"
-                                                   x:Name="ValidationText"
-                                                   TextWrapping="Wrap"
-                                                   MaxWidth="{Binding ActualWidth, ElementName=cp77ExeTxtb}"
-                                                   Background="OrangeRed"
-                                                   FontSize="14"
-                                                   TextAlignment="Center"
-                                                   Text ="TEMP"
-                                                />
+                                                        x:Name="cp77ExeTxtb"
+                                                        Width="600"
+                                                        Margin="0"
+                                                        hc:InfoElement.Necessary="True"
+                                                        hc:InfoElement.Placeholder="Enter full path : Cyberpunk 2077\bin\x64\Cyberpunk2077.exe"
+                                                        hc:InfoElement.Title="Executable Path"
+                                                        hc:InfoElement.TitlePlacement="Left"
+                                                        hc:InfoElement.TitleWidth="150"
+                                                        Style="{StaticResource TextBoxExtendCustom}"
+                                                        Text="{Binding CP77ExePath}"
+                                                        TextChanged="Field_TextChanged"
+                                                        VerifyFunc="VerifyFile" />
+                                                    <Button
+                                                        Grid.Column="1"
+                                                        Width="50"
+                                                        Height="34"
+                                                        Margin="0,10,0,0"
+                                                        BorderBrush="{DynamicResource BorderBrush}"
+                                                        BorderThickness="1"
+                                                        Command="{Binding OpenCP77GamePathCommand}"
+                                                        Style="{DynamicResource WPFFlatButtonStyle}">
+
+                                                        <iconPacks:PackIconCodicons
+                                                            Grid.Row="0"
+                                                            Width="15"
+                                                            Height="15"
+                                                            Margin="0,0,0,0"
+                                                            HorizontalAlignment="Center"
+                                                            VerticalAlignment="Center"
+                                                            Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                                                            Kind="FolderOpened"
+                                                            Spin="False"
+                                                            SpinAutoReverse="False" />
+                                                    </Button>
+                                                </StackPanel>
+                                                <TextBlock
+                                                    x:Name="ValidationText"
+                                                    MaxWidth="{Binding ActualWidth, ElementName=cp77ExeTxtb}"
+                                                    Margin="150,2,65,0"
+                                                    Background="DarkRed"
+                                                    FontSize="14"
+                                                    Text="TEMP"
+                                                    TextAlignment="Center"
+                                                    TextWrapping="Wrap"
+                                                    Visibility="Collapsed" />
+
+                                                <StackPanel Orientation="Horizontal">
+
+                                                    <hc:TextBox
+                                                        x:Name="matdepotxtb"
+                                                        Width="590"
+                                                        Margin="0,10,10,0"
+                                                        hc:InfoElement.Necessary="False"
+                                                        hc:InfoElement.Placeholder="Enter full path : Material Repository Path (Can be any new folder)"
+                                                        hc:InfoElement.Title="Material Repository Folder"
+                                                        hc:InfoElement.TitlePlacement="Left"
+                                                        hc:InfoElement.TitleWidth="150"
+                                                        Style="{StaticResource TextBoxExtend}"
+                                                        Text="{Binding MaterialDepotPath}"
+                                                        Visibility="Visible" />
+                                                    <Button
+                                                        Grid.Column="1"
+                                                        Width="50"
+                                                        Height="34"
+                                                        Margin="0,10,0,0"
+                                                        BorderBrush="{DynamicResource BorderBrush}"
+                                                        BorderThickness="1"
+                                                        Command="{Binding BINDMETOSELECTREPOPATH}"
+                                                        Style="{DynamicResource WPFFlatButtonStyle}">
+
+                                                        <iconPacks:PackIconCodicons
+                                                            Grid.Row="0"
+                                                            Width="15"
+                                                            Height="15"
+                                                            Margin="0,0,0,0"
+                                                            HorizontalAlignment="Center"
+                                                            VerticalAlignment="Center"
+                                                            Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                                                            Kind="FolderOpened"
+                                                            Spin="False"
+                                                            SpinAutoReverse="False" />
+                                                    </Button>
+                                                </StackPanel>
                                             </StackPanel>
-
-                                            <Button
-                                                Grid.Column="1"
-                                                Width="50"
-                                                Height="34"
-                                                Margin="0,0,10,0"
-                                                HorizontalAlignment="Center"
-                                                VerticalAlignment="Center"
-                                                Command="{Binding OpenCP77GamePathCommand}">
-
-                                                <iconPacks:PackIconCodicons
-                                                    Grid.Row="0"
-                                                    Width="15"
-                                                    Height="15"
-                                                    Margin="0,0,0,0"
-                                                    HorizontalAlignment="Center"
-                                                    VerticalAlignment="Center"
-                                                    Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                                                    Kind="FolderOpened"
-                                                    Spin="False"
-                                                    SpinAutoReverse="False" />
-                                            </Button>
-
-                                            
                                         </Grid>
-                                        
-                                        
-                                        
-
-                                        <syncfusion:SfTextInputLayout  Hint="Enter full path : Material Repository Path (Can be any new folder)">
-                                            <hc:TextBox
-                                 x:Name="matdepotxtb"
-                                 Margin="0,-15,0,-15"
-                                 hc:InfoElement.Necessary="False"
-                                 hc:InfoElement.Title="Executable Path"
-                                 hc:InfoElement.TitlePlacement="Left"
-                                 hc:InfoElement.TitleWidth="0"
-                                 Style="{StaticResource TextBoxExtendCustom}"
-                                 Text="{Binding MaterialDepotPath}"
-                                
-                                 />
-                                        </syncfusion:SfTextInputLayout>
-
-
-
                                     </StackPanel>
                                 </Grid>
                             </StackPanel>
