--- a/WolvenKit/Views/Wizards/InstallerWizardView.xaml
+++ b/WolvenKit/Views/Wizards/InstallerWizardView.xaml
@@ -38,7 +38,8 @@
          Stretch="Fill"
          Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}"
          StrokeThickness="1"
-         Style="{DynamicResource Path}" />
+          />
+        <!--Style="{DynamicResource Path}"-->
 
         <StackPanel
          Margin="15,25,0,0"
